fixed java version + tools

--- a/Jeedle-Dropper/pom.xml
+++ b/Jeedle-Dropper/pom.xml
@@ -6,4 +6,16 @@
     <groupId>Jeedle</groupId>
     <artifactId>Jeedle-Dropper</artifactId>
     <version>0.0.1</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
