--- a/Jeedle-Agent/pom.xml
+++ b/Jeedle-Agent/pom.xml
@@ -6,6 +6,13 @@
     <groupId>Jeedle</groupId>
     <artifactId>Jeedle-Agent</artifactId>
     <version>0.0.1</version>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
@@ -14,6 +21,14 @@
                 <version>2.3.1</version>
                 <configuration>
                     <outputDirectory>/../Jeedle-C2/src/main/resources/Beacons</outputDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
                 </configuration>
             </plugin>
         </plugins>
