--- a/Jeedle-Dropper/pom.xml
+++ b/Jeedle-Dropper/pom.xml
@@ -5,7 +5,6 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>Jeedle</groupId>
     <artifactId>Jeedle-Dropper</artifactId>
-    <packaging>pom</packaging>
     <version>0.0.1</version>
     <dependencies>
         <dependency>
@@ -13,20 +12,62 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun</groupId>
+            <artifactId>tools</artifactId>
+            <scope>system</scope>
+            <version>1.6.0</version>
+            <type>jar</type>
+            <systemPath>${project.basedir}\libs\tools.jar</systemPath>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.1</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <addDefaultImplementationEntries>
+                                true
+                            </addDefaultImplementationEntries>
+                            <addDefaultSpecificationEntries>
+                                true
+                            </addDefaultSpecificationEntries>
+                            <mainClass>dropper.DropperApplication</mainClass>
+                        </manifest>
+                        <manifestEntries>
+                            <Built-By>Jeedle</Built-By>
+                            <Class-Path>libs\tools.jar</Class-Path>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-    <modules>
-        <module>Jeedle-C2</module>
-    </modules>
 </project>
