--- a/Jeedle-Dropper/pom.xml
+++ b/Jeedle-Dropper/pom.xml
@@ -8,6 +8,11 @@
     <version>0.0.1</version>
     <dependencies>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
